--- a/frontend/src/pages/index.astro
+++ b/frontend/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import ListItem from "../components/ListItem.astro";
-import data from "../../../data/output.json";
+import data from "../../data/output.json";
 ---
 
 <Layout title="Welcome to Astro.">
