Updated page title and description

--- a/frontend/src/pages/index.astro
+++ b/frontend/src/pages/index.astro
@@ -8,7 +8,7 @@ const usernameURL = new URL(Astro.site);
 usernameURL.hash = "USERNAME";
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="NZ Top Committers">
   <main>
     <h1><span class="text-gradient">NZ</span> Top Committers</h1>
     <p>
