Use UTC string for last updated instead of local string (Its server side rendered so its always utc local)

--- a/frontend/src/pages/index.astro
+++ b/frontend/src/pages/index.astro
@@ -31,7 +31,7 @@ usernameURL.hash = "USERNAME";
     </p>
 
     <p class="updated">
-      Last Updated: {new Date(data.generated_at).toLocaleString()}
+      Last Updated: {new Date(data.generated_at).toUTCString()}
     </p>
 
     <div class="display">
