--- a/frontend/src/pages/index.astro
+++ b/frontend/src/pages/index.astro
@@ -41,7 +41,7 @@ usernameURL.hash = "USERNAME";
       </p>
 
       <pre
-        class="display__code"><code>[![committers.top badge]({badgeURL})]({usernameURL})</code></pre>
+        class="display__code"><code>[![NZ Top Committers badge]({badgeURL})]({usernameURL})</code></pre>
     </div>
 
     <ul role="list" class="list">
