--- a/frontend/src/pages/index.astro
+++ b/frontend/src/pages/index.astro
@@ -1,5 +1,4 @@
 ---
-import Layout from "../layouts/Layout.astro";
 import ListItem from "../components/ListItem.astro";
 import data from "../../data/output.json";
 
@@ -8,61 +7,110 @@ const usernameURL = new URL(Astro.site);
 usernameURL.hash = "USERNAME";
 ---
 
-<Layout title="NZ Top Committers">
-  <main>
-    <h1><span class="text-gradient">NZ</span> Top Committers</h1>
-    <p>
-      This website includes a list of the users in NZ that have the most GitHub
-      commits
-    </p>
-
-    <p>
-      To be included in this list you must have at least {data.min_followers}
-      followers
-    </p>
-
-    <p class="excludes">
-      This list excludes accounts that use bots or other unfair means to
-      artifically increase their commit counts, you can view the excluded list
-      <a
-        href="https://github.com/jacobtread/Committers/blob/master/blacklist.txt"
-        target="_blank">Here</a
-      >
-    </p>
-
-    <p class="updated">
-      Last Updated: {new Date(data.generated_at).toUTCString()}
-    </p>
-
-    <div class="display">
-      <p class="display__text">
-        You can display a badge on your GitHub profile using the following
-        markdown
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="description"
+      content="List of most active GitHub users in New Zealand."
+    />
+    <meta name="viewport" content="width=device-width" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="generator" content={Astro.generator} />
+    <title>Most active GitHub users in New Zealand</title>
+  </head>
+  <body>
+    <main>
+      <h1><span class="text-gradient">NZ</span> Top Committers</h1>
+      <p>
+        This website includes a list of the users in NZ that have the most
+        GitHub commits
       </p>
 
-      <pre
-        class="display__code"><code>[![NZ Top Committers badge]({badgeURL})]({usernameURL})</code></pre>
-    </div>
+      <p>
+        To be included in this list you must have at least {data.min_followers}
+        followers
+      </p>
 
-    <ul role="list" class="list">
-      {
-        data.users
-          .slice(0, 100)
-          .map((user, index) => (
-            <ListItem
-              {index}
-              login={user.login}
-              name={user.name}
-              commits={user.commits}
-              avatar={user.avatar}
-            />
-          ))
-      }
-    </ul>
-  </main>
-</Layout>
+      <p class="excludes">
+        This list excludes accounts that use bots or other unfair means to
+        artifically increase their commit counts, you can view the excluded list
+        <a
+          href="https://github.com/jacobtread/Committers/blob/master/blacklist.txt"
+          target="_blank"
+          rel="noreferrer noopener"
+        >
+          Here
+        </a>
+      </p>
+
+      <p class="updated">
+        Last Updated: {new Date(data.generated_at).toUTCString()}
+      </p>
+
+      <div class="display">
+        <p class="display__text">
+          You can display a badge on your GitHub profile using the following
+          markdown
+        </p>
+
+        <pre
+          class="display__code"><code>[![NZ Top Committers badge]({badgeURL})]({usernameURL})</code></pre>
+      </div>
+
+      <ul role="list" class="list">
+        {
+          data.users
+            .slice(0, 100)
+            .map((user, index) => (
+              <ListItem
+                {index}
+                login={user.login}
+                name={user.name}
+                commits={user.commits}
+                avatar={user.avatar}
+              />
+            ))
+        }
+      </ul>
+    </main>
+  </body>
+</html>
 
 <style>
+  :root {
+    --accent: 124, 58, 237;
+    --accent-gradient: linear-gradient(45deg, #26633f, #62da94 30%, white 60%);
+  }
+
+  html {
+    font-family: system-ui, sans-serif;
+    background-color: #111;
+    color: #999;
+  }
+
+  code {
+    font-family: Menlo, Monaco, Lucida Console, Liberation Mono,
+      DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace;
+  }
+
+  * {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+  }
+
+  *::-webkit-scrollbar {
+    background-color: #333;
+    max-width: 8px;
+    max-height: 8px;
+  }
+
+  *::-webkit-scrollbar-thumb {
+    background-color: #62da94;
+  }
+
   .updated {
     color: #777;
   }
@@ -90,6 +138,7 @@ usernameURL.hash = "USERNAME";
     padding: 1.5rem;
     max-width: 48rem;
   }
+
   h1 {
     font-size: 3rem;
     font-weight: 800;
@@ -97,6 +146,7 @@ usernameURL.hash = "USERNAME";
     color: #fff;
     margin-bottom: 0.5rem;
   }
+
   .text-gradient {
     background-image: var(--accent-gradient);
     -webkit-background-clip: text;
@@ -104,10 +154,12 @@ usernameURL.hash = "USERNAME";
     background-size: 400%;
     background-position: 0%;
   }
+
   p {
     margin-bottom: 1rem;
     color: #ccc;
   }
+
   .list {
     display: grid;
     grid-template-columns: 1fr;
