--- a/frontend/src/pages/index.astro
+++ b/frontend/src/pages/index.astro
@@ -7,7 +7,7 @@ const usernameURL = new URL(Astro.site);
 usernameURL.hash = "USERNAME";
 ---
 
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -78,7 +78,7 @@ usernameURL.hash = "USERNAME";
   </body>
 </html>
 
-<style>
+<style is:global>
   :root {
     --accent: 124, 58, 237;
     --accent-gradient: linear-gradient(45deg, #26633f, #62da94 30%, white 60%);
@@ -91,8 +91,15 @@ usernameURL.hash = "USERNAME";
   }
 
   code {
-    font-family: Menlo, Monaco, Lucida Console, Liberation Mono,
-      DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace;
+    font-family:
+      Menlo,
+      Monaco,
+      Lucida Console,
+      Liberation Mono,
+      DejaVu Sans Mono,
+      Bitstream Vera Sans Mono,
+      Courier New,
+      monospace;
   }
 
   * {
