--- a/frontend/src/components/ListItem.astro
+++ b/frontend/src/components/ListItem.astro
@@ -67,6 +67,7 @@ const { index, login, name, commits, avatar } = Astro.props;
     line-height: 1rem;
     color: white;
     font-weight: bold;
+    box-sizing: content-box;
   }
 
   .item__flex {
@@ -84,7 +85,8 @@ const { index, login, name, commits, avatar } = Astro.props;
     background-image: none;
     background-size: 400%;
     border-radius: 0.6rem;
-    box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+    box-shadow:
+      0 4px 6px -1px rgba(0, 0, 0, 0.1),
       0 2px 4px -2px rgba(0, 0, 0, 0.1);
   }
 
